[package]
name = "deeper_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "deeper"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module"] }
parry3d = { version = "0.11.1", features = ["serde-serialize"] }
nalgebra   = { version = "0.31", default-features = false, features = [ "libm" ] }