[tool.poetry]
name = "deeper-rpg"
version = "0.1.0"
description = "Dungeon RPG with Python Arcade and Rust"
authors = ["Kurtis Fields <kurtisfields@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.12"
arcade = "^2.7.1.dev9"
PyGLM = "^2.6.0"
bbox = "^0.9.2"
imgui = "^1.4.1"
toml = "^0.10.2"
pyyaml = "^6.0"
esper = "^2.4.1"
loguru = "^0.6.0"

[tool.poetry.group.dev.dependencies]
maturin = "^0.14.7"
pytest = "^7.2.0"
pytest-benchmark = "^3.4.1"
py = "^1.11.0"
black = "^22.12.0"

[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "deeper-rpg"
version = "0.1.0"
description = "Game with Python Arcade and Rust"
authors = [ {name = "kfields", email = "kurtisfields@gmail.com"} ]
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
homepage = "https://github.com/kfields/deeper"
documentation = "https://kfields.github.io/deeper/"
repository = "https://github.com/kfields/deeper"
changelog = "https://github.com/kfields/deeper/blob/main/CHANGELOG.md"