[tool.poetry]
name = "deeper-docs"
version = "0.1.6"
description = ""
authors = ["Kurtis Fields <kurtisfields@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sphinx = "^6.1.3"
sphinx-rtd-theme = "^1.2.0"
sphinxcontrib-apidoc = "^0.3.0"
sphinxemoji = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
